5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4159/executions/1638_652.log
== TEST (2019-04-11 13:34:36) 
-- CODE:
num = int(input("numero: "))
if((num//100)%(num%100)==0):
	print(SIM)
else:
	print(NAO)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(NAO)
NameError: name 'NAO' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 13:35:01) 
-- CODE:
num = int(input("numero: "))
if((num//100)%(num%100)==0):
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.12152
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
NAO
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:35:08) 
-- CODE:
num = int(input("numero: "))
if((num//100)%(num%100)==0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 13:35:57) 
-- CODE:
num = int(input("numero: "))
if(num%(num%100)==0):
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.288287
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
